# sat-finder

./: .gitignore  config.yaml  pyproject.toml
prompts/: describe.txt  score.txt
src/satelite/: __init__.py  cli.py  config.py  db.py  geo.py  models.py
src/satelite/stages/: capture.py  debug.py  describe.py  export.py  harvest.py  score.py
tests/: conftest.py  test_capture.py  test_db.py  test_describe.py  test_export.py  test_geo.py  test_harvest.py  test_models.py  test_score.py
